kubernetes/hw3/task2/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
